[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
diesel = { version = "1.4.7", features = ["sqlite", "r2d2"] }
bcrypt = "0.10"
async-trait = "0.1.50"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]